--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "Project-3-challenge",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd left-on-scene && npm start\"",
+    "install": "cd server && npm i && cd ../left-on-scene && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "build": "cd left-on-scene && npm run build"
   },
   "repository": {
     "type": "git",
