--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,11 @@
   "name": "mern-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon",
+    "watch": "nodemon server.js",
     "seed": "node config/seeds.js"
   },
   "author": "",
