--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "apollo": "^2.34.0",
     "axios": "^1.5.0",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "react-bootstrap": "^2.9.0"
   }
 }
