--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^8.2.1"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.1",
     "apollo": "^2.34.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
